donation button now showing on log in, signup now not showing after log in and fixed some css

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -104,9 +104,9 @@ code {
 .dropdown-content {
   position: absolute;
   left: 0;
-  background-color: var(--quatrinary);
+  background-color: white;
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.2);
-  padding: 0.75rem;
+  padding: 1rem;
   border-radius: 0.2rem;
   opacity: 0;
   pointer-events: none;
